Refactor header and navigation for responsiveness
Updated header and navigation styles, added responsive design features, and removed deprecated sections.

--- a/index.html
+++ b/index.html
@@ -1,169 +1,148 @@
-<!DOCTYPE html><html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Algeriano_Neo — The Ultra Next-Gen Smart Platform</title>
+<!-- START: Ultra-Pro Header for Algeriano_Neo -->
+<header id="alg-header" dir="rtl" style="font-family: 'Tajawal', sans-serif;">
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #000;
-      color: #fff;
-    }/* HEADER */
-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px;
-  background: rgba(0,0,0,0.7);
-  backdrop-filter: blur(6px);
-  border-bottom: 1px solid #222;
-}
+    :root{
+      --bg:#06060a;
+      --panel:rgba(255,255,255,0.03);
+      --muted:#9aa3b2;
+      --neon1:#6f4cff;
+      --neon2:#00c6ff;
+      --gold:#c7a965;
+    }
+    /* header base */
+    #alg-header{position:fixed;top:0;left:0;right:0;z-index:200;}
+    .alg-top{
+      display:flex;align-items:center;justify-content:center;
+      padding:12px 16px;background:linear-gradient(180deg, rgba(0,0,0,0.55), rgba(0,0,0,0.25));
+      border-bottom:1px solid rgba(255,255,255,0.02);backdrop-filter: blur(6px);
+    }
+    .alg-brand{display:flex;flex-direction:column;align-items:center;gap:4px}
+    .alg-logo{
+      font-weight:900;letter-spacing:2px;
+      color:var(--neon1);font-size:18px;
+      text-shadow:0 0 12px rgba(111,76,255,0.25);
+    }
+    .alg-tag{font-size:11px;color:var(--muted);}
 
-.logo {
-  font-size: 24px;
-  font-weight: bold;
-  color: #9b5cff;
-  text-shadow: 0 0 10px #9b5cff;
-}
+    /* menu & hamburger */
+    .alg-controls{position:absolute;left:14px;display:flex;align-items:center;gap:8px}
+    .alg-hamburger{width:44px;height:44px;border-radius:10px;display:flex;align-items:center;justify-content:center;background:var(--panel);border:1px solid rgba(255,255,255,0.02);cursor:pointer}
+    .alg-hamburger svg{width:20px;height:20px;fill:var(--neon2);filter:drop-shadow(0 4px 12px rgba(0,198,255,0.08));}
 
-nav a {
-  margin-left: 20px;
-  text-decoration: none;
-  color: #ccc;
-  transition: 0.3s;
-}
-nav a:hover {
-  color: #9b5cff;
-  text-shadow: 0 0 6px #9b5cff;
-}
+    .alg-login{position:absolute;right:12px;display:flex;gap:8px;align-items:center}
+    .alg-btn{padding:8px 12px;border-radius:10px;border:1px solid rgba(255,255,255,0.04);background:transparent;color:var(--gold);font-weight:700;font-size:13px}
+    .alg-btn.primary{background:linear-gradient(90deg,var(--neon1),var(--neon2));color:#00111a;border:none;box-shadow:0 8px 30px rgba(111,76,255,0.12)}
 
-/* HERO */
-.hero {
-  text-align: center;
-  padding: 150px 20px;
-  background: linear-gradient(160deg,#000,#1a0033,#000);
-}
+    /* news ticker */
+    .alg-news{
+      margin-top:8px;background:linear-gradient(90deg, rgba(111,76,255,0.03), rgba(0,198,255,0.02));
+      padding:8px;border-radius:10px;margin-left:14px;margin-right:14px;overflow:hidden;border:1px solid rgba(255,255,255,0.02);
+      display:flex;align-items:center;gap:10px;
+      color:var(--neon1);font-weight:700;font-size:13px;
+    }
+    .alg-news .label{background:linear-gradient(90deg,var(--gold),rgba(255,255,255,0.02));padding:6px 8px;border-radius:8px;color:#081;font-weight:900;font-size:12px}
+    .alg-news .scroll{white-space:nowrap;display:inline-block;padding-left:6px;animation:alg-scroll 18s linear infinite;color:var(--muted);font-weight:700}
+    @keyframes alg-scroll{0%{transform:translateX(0)}100%{transform:translateX(-100%)}}
 
-.hero h1 {
-  font-size: 48px;
-  color: #c08aff;
-  text-shadow: 0 0 15px #a55cff;
-}
+    /* slide menu (mobile) */
+    .alg-side{
+      position:fixed;top:0;left:0;height:100vh;width:260px;background:linear-gradient(180deg, rgba(3,3,6,0.98), rgba(10,6,20,0.95));
+      transform:translateX(-110%);transition:transform .28s cubic-bezier(.2,.9,.2,1);z-index:250;padding:18px;border-right:1px solid rgba(255,255,255,0.02)
+    }
+    .alg-side.open{transform:translateX(0)}
+    .alg-side .item{padding:12px 10px;border-radius:10px;margin-bottom:8px;color:var(--neon1);font-weight:800;display:flex;justify-content:space-between;align-items:center}
+    .alg-side .item .sub{font-weight:600;color:var(--muted);font-size:13px}
 
-.hero p {
-  margin-top: 10px;
-  font-size: 18px;
-  color: #ccc;
-}
+    /* desktop menu (hidden mobile) */
+    @media(min-width:880px){
+      .alg-hamburger{display:none}
+      .alg-side{position:static;transform:none;height:auto;background:transparent;padding:0;border:none;display:flex;gap:18px}
+      .alg-side .item{background:transparent;color:var(--muted);font-weight:700;padding:6px 8px;border-radius:8px}
+      .alg-news{margin-left:220px;margin-right:220px}
+      .alg-controls{left:220px}
+      .alg-login{right:220px}
+    }
 
-.btns {
-  margin-top: 30px;
-}
-
-.btns button {
-  padding: 12px 28px;
-  margin: 10px;
-  background: #9b5cff;
-  border: none;
-  color: #fff;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: 0.3s;
-  font-size: 16px;
-  box-shadow: 0 0 10px #9b5cff;
-}
-
-.btns button:hover {
-  background: #c8a0ff;
-  box-shadow: 0 0 20px #c8a0ff;
-}
-
-/* FEATURES */
-.features {
-  display: grid;
-  grid-template-columns: repeat(4,1fr);
-  padding: 60px 20px;
-  gap: 20px;
-  text-align: center;
-}
-
-.feature-box {
-  padding: 30px 20px;
-  background: #111;
-  border: 1px solid #222;
-  border-radius: 14px;
-  transition: 0.3s;
-}
-
-.feature-box:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 0 15px #9b5cff;
-  border-color: #9b5cff;
-}
-
-/* NEWS BAR */
-.news-bar {
-  margin-top: 40px;
-  padding: 14px 0;
-  background: #111;
-  border-top: 1px solid #333;
-  border-bottom: 1px solid #333;
-  overflow: hidden;
-  white-space: nowrap;
-  color: #9b5cff;
-  font-size: 18px;
-  text-shadow: 0 0 6px #9b5cff;
-}
-
-.news-scroll {
-  display: inline-block;
-  padding-left: 100%;
-  animation: scroll 15s linear infinite;
-}
-
-@keyframes scroll {
-  0% { transform: translateX(0); }
-  100% { transform: translateX(-100%); }
-}
-
-/* FOOTER */
-footer {
-  margin-top: 80px;
-  padding: 20px;
-  background: #000;
-  border-top: 1px solid #222;
-  text-align: center;
-  color: #777;
-}
-
+    /* small tweaks */
+    body {padding-top:96px} /* leave space for fixed header */
   </style>
-</head>
-<body>
-  <header>
-    <div class="logo">ALGERIANO_NEO</div>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">Services</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    </nav>
-  </header>  <section class="hero">
-    <h1>Algeriano_Neo — The Ultra Next-Gen Smart Platform</h1>
-    <p>Marketplace • Fun Center • Drivers Network • Health Hub — All in One.</p>
-    <div class="btns">
-      <button>Start Now</button>
-      <button>Explore</button>
+
+  <div class="alg-top" role="navigation" aria-label="رأس المنصة">
+    <div class="alg-controls">
+      <button class="alg-hamburger" id="algHamb" aria-label="قائمة">
+        <svg viewBox="0 0 24 24"><path d="M3 6h18v2H3zM3 11h18v2H3zM3 16h18v2H3z"/></svg>
+      </button>
     </div>
-  </section>  <div class="news-bar">
-    <div class="news-scroll">🔥 Breaking News: Algeriano_Neo is launching the Ultra Smart System 2025 — Stay Tuned! 🔥</div>
-  </div>  <section class="features">
-    <div class="feature-box">Trade</div>
-    <div class="feature-box">Fun</div>
-    <div class="feature-box">Delivery</div>
-    <div class="feature-box">Health</div>
-  </section>  <footer>
-    © 2025 Algeriano_Neo — All Rights Reserved.
-  </footer>
-</body>
-</html>
+
+    <div class="alg-brand" aria-hidden="false">
+      <div class="alg-logo">ALGERIANO_NEO</div>
+      <div class="alg-tag">The Ultra Next-Gen Smart Platform</div>
+    </div>
+
+    <div class="alg-login" aria-hidden="false">
+      <button class="alg-btn">دخول</button>
+      <button class="alg-btn primary">انضم الآن</button>
+    </div>
+  </div>
+
+  <div class="alg-news" aria-live="polite">
+    <div class="label">عاجل</div>
+    <div class="scroll" id="algNews">⚡ انطلاق النسخة التجريبية لـ Algeriano_Neo — عروض خاصة للبائعين الأوائل • انضم كسائق واحصل على مزايا • حجز فوري للطبيب والمتابعة المنزلية</div>
+  </div>
+
+  <!-- side menu (mobile) -->
+  <nav id="algSide" class="alg-side" aria-hidden="true">
+    <div style="display:flex;align-items:center;gap:12px;margin-bottom:18px">
+      <div style="width:44px;height:44;border-radius:10px;background:linear-gradient(90deg,var(--neon1),var(--neon2));display:flex;align-items:center;justify-content:center;font-weight:900;color:#00111a">AN</div>
+      <div>
+        <div style="font-weight:900;color:var(--neon1)">ALGERIANO_NEO</div>
+        <div style="font-size:13px;color:var(--muted)">منصة جزائرية ذكية</div>
+      </div>
+    </div>
+
+    <div class="item" role="link" onclick="location.href='index.html'">الرئيسية <div class="sub">Home</div></div>
+    <div class="item" role="link" onclick="location.href='products.html'">التجارة <div class="sub">Marketplace</div></div>
+    <div class="item" role="link" onclick="location.href='videos.html'">الترفيه <div class="sub">Reels</div></div>
+    <div class="item" role="link" onclick="location.href='drivers.html'">السائقين <div class="sub">Drivers</div></div>
+    <div class="item" role="link" onclick="location.href='services.html'">الخدمات <div class="sub">Services</div></div>
+    <div class="item" role="link" onclick="location.href='health.html'">الصحة <div class="sub">Health</div></div>
+    <div class="item" role="link" onclick="location.href='women.html'">قسم النساء <div class="sub">Women</div></div>
+
+    <div style="margin-top:18px;border-top:1px solid rgba(255,255,255,0.02);padding-top:12px">
+      <div style="font-size:13px;color:var(--muted);margin-bottom:6px">الحساب</div>
+      <div style="display:flex;gap:8px">
+        <button class="alg-btn" onclick="location.href='auth.html'">دخول</button>
+        <button class="alg-btn primary" onclick="location.href='signup.html'">تسجيل</button>
+      </div>
+    </div>
+  </nav>
+
+  <script>
+    // Toggle side menu (mobile)
+    (function(){
+      const hamb = document.getElementById('algHamb');
+      const side = document.getElementById('algSide');
+      let open = false;
+      hamb.addEventListener('click', ()=>{
+        open = !open;
+        if(open){ side.classList.add('open'); side.setAttribute('aria-hidden','false'); }
+        else { side.classList.remove('open'); side.setAttribute('aria-hidden','true'); }
+      });
+
+      // close when clicking outside on mobile
+      document.addEventListener('click', (e)=>{
+        if(!side.contains(e.target) && !hamb.contains(e.target) && side.classList.contains('open')){
+          side.classList.remove('open'); side.setAttribute('aria-hidden','true'); open=false;
+        }
+      });
+
+      // pause news scroll on hover (desktop)
+      const news = document.getElementById('algNews');
+      if(news){
+        news.addEventListener('mouseover', ()=> news.style.animationPlayState='paused');
+        news.addEventListener('mouseout', ()=> news.style.animationPlayState='running');
+      }
+    })();
+  </script>
+</header>
+<!-- END: Ultra-Pro Header for Algeriano_Neo -->
