Refactor header and navigation styles in index.html
Updated HTML structure and styles for the Algeriano_Neo header, including new navigation and button styles.

--- a/index.html
+++ b/index.html
@@ -1,148 +1,193 @@
-<!-- START: Ultra-Pro Header for Algeriano_Neo -->
-<header id="alg-header" dir="rtl" style="font-family: 'Tajawal', sans-serif;">
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Algeriano_Neo</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;800;900&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
   <style>
-    :root{
-      --bg:#06060a;
-      --panel:rgba(255,255,255,0.03);
-      --muted:#9aa3b2;
-      --neon1:#6f4cff;
-      --neon2:#00c6ff;
-      --gold:#c7a965;
-    }
-    /* header base */
-    #alg-header{position:fixed;top:0;left:0;right:0;z-index:200;}
-    .alg-top{
-      display:flex;align-items:center;justify-content:center;
-      padding:12px 16px;background:linear-gradient(180deg, rgba(0,0,0,0.55), rgba(0,0,0,0.25));
-      border-bottom:1px solid rgba(255,255,255,0.02);backdrop-filter: blur(6px);
-    }
-    .alg-brand{display:flex;flex-direction:column;align-items:center;gap:4px}
-    .alg-logo{
-      font-weight:900;letter-spacing:2px;
-      color:var(--neon1);font-size:18px;
-      text-shadow:0 0 12px rgba(111,76,255,0.25);
-    }
-    .alg-tag{font-size:11px;color:var(--muted);}
 
-    /* menu & hamburger */
-    .alg-controls{position:absolute;left:14px;display:flex;align-items:center;gap:8px}
-    .alg-hamburger{width:44px;height:44px;border-radius:10px;display:flex;align-items:center;justify-content:center;background:var(--panel);border:1px solid rgba(255,255,255,0.02);cursor:pointer}
-    .alg-hamburger svg{width:20px;height:20px;fill:var(--neon2);filter:drop-shadow(0 4px 12px rgba(0,198,255,0.08));}
-
-    .alg-login{position:absolute;right:12px;display:flex;gap:8px;align-items:center}
-    .alg-btn{padding:8px 12px;border-radius:10px;border:1px solid rgba(255,255,255,0.04);background:transparent;color:var(--gold);font-weight:700;font-size:13px}
-    .alg-btn.primary{background:linear-gradient(90deg,var(--neon1),var(--neon2));color:#00111a;border:none;box-shadow:0 8px 30px rgba(111,76,255,0.12)}
-
-    /* news ticker */
-    .alg-news{
-      margin-top:8px;background:linear-gradient(90deg, rgba(111,76,255,0.03), rgba(0,198,255,0.02));
-      padding:8px;border-radius:10px;margin-left:14px;margin-right:14px;overflow:hidden;border:1px solid rgba(255,255,255,0.02);
-      display:flex;align-items:center;gap:10px;
-      color:var(--neon1);font-weight:700;font-size:13px;
-    }
-    .alg-news .label{background:linear-gradient(90deg,var(--gold),rgba(255,255,255,0.02));padding:6px 8px;border-radius:8px;color:#081;font-weight:900;font-size:12px}
-    .alg-news .scroll{white-space:nowrap;display:inline-block;padding-left:6px;animation:alg-scroll 18s linear infinite;color:var(--muted);font-weight:700}
-    @keyframes alg-scroll{0%{transform:translateX(0)}100%{transform:translateX(-100%)}}
-
-    /* slide menu (mobile) */
-    .alg-side{
-      position:fixed;top:0;left:0;height:100vh;width:260px;background:linear-gradient(180deg, rgba(3,3,6,0.98), rgba(10,6,20,0.95));
-      transform:translateX(-110%);transition:transform .28s cubic-bezier(.2,.9,.2,1);z-index:250;padding:18px;border-right:1px solid rgba(255,255,255,0.02)
-    }
-    .alg-side.open{transform:translateX(0)}
-    .alg-side .item{padding:12px 10px;border-radius:10px;margin-bottom:8px;color:var(--neon1);font-weight:800;display:flex;justify-content:space-between;align-items:center}
-    .alg-side .item .sub{font-weight:600;color:var(--muted);font-size:13px}
-
-    /* desktop menu (hidden mobile) */
-    @media(min-width:880px){
-      .alg-hamburger{display:none}
-      .alg-side{position:static;transform:none;height:auto;background:transparent;padding:0;border:none;display:flex;gap:18px}
-      .alg-side .item{background:transparent;color:var(--muted);font-weight:700;padding:6px 8px;border-radius:8px}
-      .alg-news{margin-left:220px;margin-right:220px}
-      .alg-controls{left:220px}
-      .alg-login{right:220px}
+    body {
+      margin: 0;
+      padding: 0;
+      background: #0e0b16;
+      font-family: 'Cairo', sans-serif;
+      color: #eee;
     }
 
-    /* small tweaks */
-    body {padding-top:96px} /* leave space for fixed header */
+    /* هيدر فااخر */
+    .neo-header {
+      position: sticky;
+      top: 0;
+      z-index: 999;
+      backdrop-filter: blur(14px);
+      background: rgba(20, 15, 40, 0.45);
+      border-bottom: 1px solid rgba(255, 255, 255, 0.12);
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 14px 30px;
+      box-shadow: 0 4px 22px rgba(0, 0, 0, 0.25);
+      direction: rtl;
+    }
+
+    .neo-logo {
+      font-size: 1.6rem;
+      font-weight: 900;
+      background: linear-gradient(90deg, #b474ff, #7a2fff, #00eaff);
+      -webkit-background-clip: text;
+      color: transparent;
+      letter-spacing: 1.5px;
+      text-shadow: 0 0 12px rgba(160, 90, 255, 0.6);
+    }
+
+    .neo-nav ul {
+      display: flex;
+      gap: 28px;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    .neo-nav ul li a {
+      color: #ddddff;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 1.05rem;
+      transition: 0.3s;
+    }
+
+    .neo-nav ul li a:hover {
+      color: #ae7bff;
+      text-shadow: 0 0 8px #ae7bff;
+    }
+
+    .neo-actions {
+      display: flex;
+      gap: 12px;
+    }
+
+    .neo-btn {
+      padding: 8px 18px;
+      border-radius: 12px;
+      border: none;
+      cursor: pointer;
+      font-weight: 700;
+      transition: 0.25s;
+    }
+
+    .join {
+      background: linear-gradient(90deg, #7a2fff, #00eaff);
+      color: white;
+      box-shadow: 0 0 12px rgba(122, 47, 255, 0.4);
+    }
+
+    .join:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 18px rgba(122, 47, 255, 0.7);
+    }
+
+    .login {
+      background: rgba(255, 255, 255, 0.15);
+      color: #eaeaff;
+      backdrop-filter: blur(10px);
+    }
+
+    .login:hover {
+      background: rgba(255, 255, 255, 0.25);
+      transform: scale(1.05);
+    }
+
+    /* الهيرو */
+    .hero {
+      text-align: center;
+      padding: 120px 20px;
+    }
+
+    .hero h1 {
+      font-size: 3rem;
+      margin-bottom: 10px;
+      background: linear-gradient(90deg, #d0a3ff, #8c4bff, #00eaff);
+      -webkit-background-clip: text;
+      color: transparent;
+      text-shadow: 0 0 20px rgba(100, 60, 255, 0.6);
+    }
+
+    .hero p {
+      font-size: 1.3rem;
+      opacity: 0.9;
+    }
+
+    /* شريط الأخبار */
+    .ticker {
+      width: 100%;
+      overflow: hidden;
+      white-space: nowrap;
+      background: rgba(255, 255, 255, 0.05);
+      border-top: 1px solid rgba(255,255,255,0.1);
+      border-bottom: 1px solid rgba(255,255,255,0.1);
+      padding: 10px 0;
+      margin-top: 40px;
+    }
+
+    .ticker span {
+      display: inline-block;
+      padding-right: 50px;
+      animation: scroll 12s linear infinite;
+      color: #b783ff;
+      font-weight: 700;
+      font-size: 1.1rem;
+    }
+
+    @keyframes scroll {
+      0% { transform: translateX(100%); }
+      100% { transform: translateX(-100%); }
+    }
+
   </style>
 
-  <div class="alg-top" role="navigation" aria-label="رأس المنصة">
-    <div class="alg-controls">
-      <button class="alg-hamburger" id="algHamb" aria-label="قائمة">
-        <svg viewBox="0 0 24 24"><path d="M3 6h18v2H3zM3 11h18v2H3zM3 16h18v2H3z"/></svg>
-      </button>
-    </div>
+</head>
 
-    <div class="alg-brand" aria-hidden="false">
-      <div class="alg-logo">ALGERIANO_NEO</div>
-      <div class="alg-tag">The Ultra Next-Gen Smart Platform</div>
-    </div>
+<body>
 
-    <div class="alg-login" aria-hidden="false">
-      <button class="alg-btn">دخول</button>
-      <button class="alg-btn primary">انضم الآن</button>
+  <!-- الهيدر -->
+  <header class="neo-header">
+    <div class="neo-logo">ALGERIANO_NEO</div>
+
+    <nav class="neo-nav">
+      <ul>
+        <li><a href="#">الرئيسية</a></li>
+        <li><a href="#">Marketplace</a></li>
+        <li><a href="#">الخدمات</a></li>
+        <li><a href="#">الترفيه</a></li>
+        <li><a href="#">السائقين</a></li>
+        <li><a href="#">الصحة</a></li>
+      </ul>
+    </nav>
+
+    <div class="neo-actions">
+      <button class="neo-btn join">انضم الآن</button>
+      <button class="neo-btn login">دخول</button>
     </div>
+  </header>
+
+  <!-- الهيرو -->
+  <section class="hero">
+    <h1>Algeriano_Neo — الجيل الجديد</h1>
+    <p>منصة جزائرية ذكية تجمع التجارة، الترفيه، السائقين، الصحة والخدمات.</p>
+  </section>
+
+  <!-- شريط الأخبار -->
+  <div class="ticker">
+    <span>⚡ إطلاق أول نسخة تجريبية من منصة Algeriano_Neo</span>
+    <span>📦 التجارة الإلكترونية بوساطة وحماية مالية</span>
+    <span>🚕 منصة السائقين بنظام اشتراك</span>
+    <span>🏥 خدمات صحية رقمية لأول مرة في الجزائر</span>
   </div>
 
-  <div class="alg-news" aria-live="polite">
-    <div class="label">عاجل</div>
-    <div class="scroll" id="algNews">⚡ انطلاق النسخة التجريبية لـ Algeriano_Neo — عروض خاصة للبائعين الأوائل • انضم كسائق واحصل على مزايا • حجز فوري للطبيب والمتابعة المنزلية</div>
-  </div>
-
-  <!-- side menu (mobile) -->
-  <nav id="algSide" class="alg-side" aria-hidden="true">
-    <div style="display:flex;align-items:center;gap:12px;margin-bottom:18px">
-      <div style="width:44px;height:44;border-radius:10px;background:linear-gradient(90deg,var(--neon1),var(--neon2));display:flex;align-items:center;justify-content:center;font-weight:900;color:#00111a">AN</div>
-      <div>
-        <div style="font-weight:900;color:var(--neon1)">ALGERIANO_NEO</div>
-        <div style="font-size:13px;color:var(--muted)">منصة جزائرية ذكية</div>
-      </div>
-    </div>
-
-    <div class="item" role="link" onclick="location.href='index.html'">الرئيسية <div class="sub">Home</div></div>
-    <div class="item" role="link" onclick="location.href='products.html'">التجارة <div class="sub">Marketplace</div></div>
-    <div class="item" role="link" onclick="location.href='videos.html'">الترفيه <div class="sub">Reels</div></div>
-    <div class="item" role="link" onclick="location.href='drivers.html'">السائقين <div class="sub">Drivers</div></div>
-    <div class="item" role="link" onclick="location.href='services.html'">الخدمات <div class="sub">Services</div></div>
-    <div class="item" role="link" onclick="location.href='health.html'">الصحة <div class="sub">Health</div></div>
-    <div class="item" role="link" onclick="location.href='women.html'">قسم النساء <div class="sub">Women</div></div>
-
-    <div style="margin-top:18px;border-top:1px solid rgba(255,255,255,0.02);padding-top:12px">
-      <div style="font-size:13px;color:var(--muted);margin-bottom:6px">الحساب</div>
-      <div style="display:flex;gap:8px">
-        <button class="alg-btn" onclick="location.href='auth.html'">دخول</button>
-        <button class="alg-btn primary" onclick="location.href='signup.html'">تسجيل</button>
-      </div>
-    </div>
-  </nav>
-
-  <script>
-    // Toggle side menu (mobile)
-    (function(){
-      const hamb = document.getElementById('algHamb');
-      const side = document.getElementById('algSide');
-      let open = false;
-      hamb.addEventListener('click', ()=>{
-        open = !open;
-        if(open){ side.classList.add('open'); side.setAttribute('aria-hidden','false'); }
-        else { side.classList.remove('open'); side.setAttribute('aria-hidden','true'); }
-      });
-
-      // close when clicking outside on mobile
-      document.addEventListener('click', (e)=>{
-        if(!side.contains(e.target) && !hamb.contains(e.target) && side.classList.contains('open')){
-          side.classList.remove('open'); side.setAttribute('aria-hidden','true'); open=false;
-        }
-      });
-
-      // pause news scroll on hover (desktop)
-      const news = document.getElementById('algNews');
-      if(news){
-        news.addEventListener('mouseover', ()=> news.style.animationPlayState='paused');
-        news.addEventListener('mouseout', ()=> news.style.animationPlayState='running');
-      }
-    })();
-  </script>
-</header>
-<!-- END: Ultra-Pro Header for Algeriano_Neo -->
+</body>
+</html>
