Refactor index.html for sidebar layout and styles
Updated the title and modified styles for better aesthetics. Replaced the navigation bar with a sidebar layout.

--- a/index.html
+++ b/index.html
@@ -3,134 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Algeriano Neo</title>
-
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;900&display=swap" rel="stylesheet">
+    <title>ALGERIANO_NEO</title>
 
     <style>
         body {
             margin: 0;
-            font-family: 'Cairo', sans-serif;
-            background: #0a0a12;
-            color: white;
+            padding: 0;
+            font-family: sans-serif;
+            background: #0c0c14;
+            color: #fff;
         }
 
-        /* ====== NAVBAR ====== */
-        nav {
-            width: 100%;
-            background: rgba(20, 20, 30, 0.8);
-            backdrop-filter: blur(12px);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 12px 25px;
+        /* ===== القائمة العمودية ===== */
+        .sidebar {
+            width: 230px;
+            height: 100vh;
+            background: #11111c;
+            padding-top: 20px;
             position: fixed;
             top: 0;
-            z-index: 999;
-            border-bottom: 1px solid rgba(150, 80, 255, 0.3);
-            box-shadow: 0 0 20px rgba(140, 60, 255, 0.25);
+            right: 0;
+            border-left: 1px solid rgba(255,255,255,0.05);
+            box-shadow: -3px 0 10px rgba(50,0,100,0.3);
         }
 
-        nav .logo {
-            font-size: 1.7rem;
-            font-weight: 800;
-            color: #b478ff;
-            text-shadow: 0 0 10px #9f4fff;
+        .sidebar h2 {
+            text-align: center;
+            color: #b37aff;
+            margin-bottom: 25px;
+            font-size: 22px;
         }
 
-        nav ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            gap: 25px;
-        }
-
-        nav ul li a {
+        .sidebar a {
+            display: block;
+            padding: 12px 25px;
             text-decoration: none;
-            color: #e0d8ff;
-            font-weight: 600;
-            font-size: 1rem;
-            transition: 0.2s;
+            font-size: 17px;
+            color: #ddd;
+            transition: 0.3s;
         }
 
-        nav ul li a:hover {
-            color: #bb86ff;
-            text-shadow: 0 0 8px #a05cff;
+        .sidebar a:hover {
+            padding-right: 35px;
+            color: #b37aff;
+            background: rgba(150,80,255,0.12);
         }
 
-        /* ====== HERO SECTION ====== */
-        .hero {
-            padding-top: 120px;
-            text-align: right;
-            padding-right: 30px;
-            padding-left: 30px;
+        .join-btn {
+            background: linear-gradient(90deg,#7b2ff7,#00c6ff);
+            margin: 20px;
+            padding: 13px !important;
+            border-radius: 10px;
+            text-align: center;
+            color: #fff !important;
+            box-shadow: 0 0 10px rgba(123,47,247,0.5);
+        }
+
+        /* ===== محتوى الصفحة ===== */
+        .content {
+            margin-right: 230px;
+            padding: 40px 25px;
         }
 
         .hero-title {
-            font-size: 3rem;
-            font-weight: 900;
-            color: #c58cff;
-            text-shadow: 0 0 15px rgba(180, 100, 255, 0.8);
+            font-size: 40px;
+            color: #b37aff;
+            margin-bottom: 20px;
+            text-shadow: 0 0 15px rgba(180,140,255,0.7);
         }
 
         .hero-text {
-            font-size: 1.2rem;
-            max-width: 500px;
-            margin-top: -10px;
+            font-size: 20px;
+            color: #ccc;
             line-height: 1.7;
-            color: #e5d8ff;
+            max-width: 450px;
         }
 
-        /* BUTTON */
-        .start-btn {
-            margin-top: 25px;
-            display: inline-block;
-            background: linear-gradient(90deg, #b478ff, #7b1fff);
-            padding: 12px 28px;
-            font-size: 1.1rem;
-            font-weight: 700;
-            border-radius: 8px;
-            color: white;
-            text-decoration: none;
-            box-shadow: 0 0 15px rgba(150, 70, 255, 0.6);
-            transition: 0.2s;
-        }
-
-        .start-btn:hover {
-            box-shadow: 0 0 25px rgba(170, 90, 255, 0.9);
-            transform: scale(1.03);
-        }
     </style>
 </head>
-
 <body>
 
-    <!-- NAV -->
-    <nav>
-        <div class="logo">ALGERIANO NEO</div>
-        <ul>
-            <li><a href="#">الرئيسية</a></li>
-            <li><a href="#">Marketplace</a></li>
-            <li><a href="#">الخدمات</a></li>
-            <li><a href="#">الترفيه</a></li>
-            <li><a href="#">السائقين</a></li>
-            <li><a href="#">الصحة</a></li>
-            <li><a href="#">انضم الآن</a></li>
-        </ul>
-    </nav>
+    <!-- ===== قائمة عمودية ===== -->
+    <div class="sidebar">
+        <h2>القائمة</h2>
 
-    <!-- HERO SECTION -->
-    <section class="hero">
-        <h1 class="hero-title">Algeriano Neo</h1>
+        <a href="#">الرئيسية</a>
+        <a href="#">Marketplace</a>
+        <a href="#">الخدمات</a>
+        <a href="#">الترفيه</a>
+        <a href="#">السائقين</a>
+        <a href="#">الصحة</a>
+
+        <a href="#" class="join-btn">انضم الآن</a>
+    </div>
+
+    <!-- ===== المحتوى ===== -->
+    <div class="content">
+        <h1 class="hero-title">Algeriano_NEO</h1>
         <p class="hero-text">
-            منصة ذكية تجمع التجارة، الترفيه، السائقين، الصحة والخدمات.  
-            الجيل الجديد من المنصات الجزائرية.
+            منصة جزائرية ذكية تجمع التجارة، الترفيه، النقل، الصحة والخدمات  
+            في نظام واحد فخم من الجيل الجديد.
         </p>
-
-        <a class="start-btn" href="#">⚡ إطلاق أول نسخة</a>
-    </section>
+    </div>
 
 </body>
 </html>
